# YOLOv8-Instance-Segmentation-CPP

./: .gitignore  CMakeLists.txt  README.md
include/: YoloUtils.h  constants.h
include/nn/: autobackend.h  onnx_model_base.h
include/utils/: augment.h  common.h  ops.h
onnxruntime/: GIT_COMMIT_ID
src/: IDetectionStrategy.h  PersonDetectionStrategy.cpp  PersonDetectionStrategy.h  PersonSegmentationMask.cpp  PersonSegmentationMask.h  SegmentationMask.cpp  SegmentationMask.h  VehicleDetectionStrategy.cpp  VehicleDetectionStrategy.h  VehicleSegmentationMask.cpp  VehicleSegmentationMask.h  YoloUtils.cpp  main.cpp
src/OrtApiWrapper/: AutoBackendOnnx.cpp  AutoBackendOnnx.h  OnnxModelBase.cpp  OnnxModelBase.h
src/nn/: autobackend.cpp  onnx_model_base.cpp
src/utils/: augment.cpp  common.cpp  ops.cpp
